@@ -1,8 +1,11 @@
 2007-01-25  dima  <dima.exe@gmail.com>
+  * rails-ruby.el: remove advice for ruby-indent-command
+  * rails-lib.el (def-snips): fix indentation
   * rails-core.el: 
 	fix list ordered in rails-core:*
 	add rails-core:observer-p
   * rails.el (rails-open-log): fix path to log file
+  * rails.el: cleanup initialization code
 
 2007-01-24  dima  <dima.exe@gmail.com>
   * rails-ui.el: create key bindings and menu items to latest changes
